manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-voting-app
  annotations:
    linkerd.io/inject: enabled
