manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-github
  namespace: ns-voting-app
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: vote-github.19273e5ee2444e628940.eastus.aksapp.io
      http:
        paths:
          - backend:
              service:
                name: azure-vote-front
                port:
                  number: 80
            path: /
            pathType: Prefix
